--- a/Jenkinsfile.yml
+++ b/Jenkinsfile.yml
@@ -6,14 +6,12 @@ on:
       - Devloper
 
 env:
-  AWS_REGION: ap-south-1                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: dev-image-smit           # set this to your Amazon ECR repository name
-  ECS_SERVICE: dev-service-smit                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: dev-cluster-smit                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: dev-task-smit # set this to the path to your Amazon ECS task definition
-                                               # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: dev-container-smit           # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
+  AWS_REGION: ap-south-1                   
+  ECR_REPOSITORY: dev-image-smit           
+  ECS_SERVICE: dev-service-smit            
+  ECS_CLUSTER: dev-cluster-smit                 
+  ECS_TASK_DEFINITION: dev-task-smit/json
+  CONTAINER_NAME: dev-container-smit
 
 jobs:
   deploy:
