--- a/Jenkinsfile.yml
+++ b/Jenkinsfile.yml
@@ -1,8 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Deploy to Amazon ECS
 
 on:
@@ -11,14 +6,12 @@ on:
       - Devloper
 
 env:
-  AWS_REGION: ap-south-1                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: dev-image-smit           # set this to your Amazon ECR repository name
-  ECS_SERVICE: dev-service-smit                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: dev-cluster-smit                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: dev-task-smit # set this to the path to your Amazon ECS task definition
-                                               # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: dev-container-smit           # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
+  AWS_REGION: ap-south-1                   
+  ECR_REPOSITORY: dev-image-smit           
+  ECS_SERVICE: dev-service-smit            
+  ECS_CLUSTER: dev-cluster-smit                 
+  ECS_TASK_DEFINITION: dev-task-smit/json
+  CONTAINER_NAME: dev-container-smit
 
 jobs:
   deploy:
@@ -53,7 +46,6 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
